--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
     "php": ">=5.5.0",
     "eloquent/enumeration": "5.1.1",
     "laravel-doctrine/orm": "1.0.*",
-    "somnambulist/laravel-doctrine-behaviours": "dev-master"
+    "somnambulist/laravel-doctrine-behaviours": "0.1.*"
   },
   "require-dev": {
 
