--- a/composer.json
+++ b/composer.json
@@ -19,8 +19,7 @@
   "require": {
     "php": ">=5.5.0",
     "eloquent/enumeration": "5.1.*",
-    "laravel/framework": "5.1.*",
-    "laravel-doctrine/orm": "1.0.*",
+    "laravel/framework": ">=5.1.* <5.3",
     "somnambulist/laravel-doctrine-behaviours": "0.2.*"
   },
   "suggest": {
