--- a/composer.json
+++ b/composer.json
@@ -17,15 +17,12 @@
   },
   "require": {
     "php": ">=5.5.9",
-    "eloquent/enumeration": "5.1.*",
-    "laravel/framework": "5.2.* || 5.3.*",
-    "somnambulist/laravel-doctrine-behaviours": "0.5.*"
+    "eloquent/enumeration": "~5.1",
+    "laravel/framework": "~5.2",
+    "somnambulist/laravel-doctrine-behaviours": "~0.5"
   },
   "suggest": {
     "rcrowe/twigbridge": "Twig integration for the Twig extension, ~0.9.*",
     "twig/extensions": "Additional useful Twig extensions ~1.3.0"
-  },
-  "require-dev": {
-
   }
 }
