--- a/composer.json
+++ b/composer.json
@@ -1,28 +1,46 @@
 {
-  "name": "somnambulist/laravel-doctrine-tenancy",
-  "type": "library",
-  "description": "A multi-tenancy implementation that uses Laravel and Doctrine.",
-  "keywords": [ "doctrine", "laravel", "laravel-doctrine", "tenancy", "multi-tenancy" ],
-  "license": "MIT",
-  "authors": [
-    {
-      "name": "Dave Redfern",
-      "email": "dave@scorpioframework.com"
+    "name": "somnambulist/laravel-doctrine-tenancy",
+    "type": "library",
+    "description": "A multi-tenancy implementation that uses Laravel and Doctrine.",
+    "keywords": [
+        "doctrine",
+        "laravel",
+        "laravel-doctrine",
+        "tenancy",
+        "multi-tenancy"
+    ],
+    "license": "MIT",
+    "authors": [
+        {
+            "name": "Dave Redfern",
+            "email": "info@somnambulist.tech"
+        }
+    ],
+    "autoload": {
+        "psr-4": {
+            "Somnambulist\\Tenancy\\": "src/"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Somnambulist\\Tenancy\\Tests\\": "tests/"
+        }
+    },
+    "require": {
+        "php": ">=7.1",
+        "eloquent/enumeration": "^5.1|^6.0",
+        "illuminate/routing": "^5.4|^6.0"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^8.0",
+        "doctrine/orm": "^2.6",
+        "laravel/framework": "^5.4|^6.0",
+        "symfony/var-dumper": "^4.3",
+        "rcrowe/twigbridge": "^0.11",
+        "twig/extensions": "^1.5"
+    },
+    "suggest": {
+        "rcrowe/twigbridge": "Twig integration for the Twig extension, ~0.9.*",
+        "twig/extensions": "Additional useful Twig extensions ~1.3.0"
     }
-  ],
-  "autoload": {
-    "psr-4": {
-      "Somnambulist\\Tenancy\\": "src/"
-    }
-  },
-  "require": {
-    "php": ">=5.6",
-    "eloquent/enumeration": "~5.1",
-    "illuminate/routing": "~5.4",
-    "somnambulist/laravel-doctrine-behaviours": "~0.5"
-  },
-  "suggest": {
-    "rcrowe/twigbridge": "Twig integration for the Twig extension, ~0.9.*",
-    "twig/extensions": "Additional useful Twig extensions ~1.3.0"
-  }
 }
