--- a/composer.json
+++ b/composer.json
@@ -29,13 +29,13 @@
     "require": {
         "php": ">=7.1",
         "eloquent/enumeration": "^5.1|^6.0",
-        "illuminate/routing": "^5.4|^6.0"
+        "illuminate/routing": "^5.4|^6.0|^7.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^8.0",
         "doctrine/orm": "^2.6",
-        "laravel/framework": "^5.4|^6.0",
-        "symfony/var-dumper": "^4.3",
+        "laravel/framework": "^5.4|^6.0|^7.0",
+        "symfony/var-dumper": "^5.0",
         "rcrowe/twigbridge": "^0.11",
         "twig/extensions": "^1.5"
     },
