--- a/composer.json
+++ b/composer.json
@@ -27,20 +27,15 @@
         }
     },
     "require": {
-        "php": ">=7.1",
-        "eloquent/enumeration": "^5.1|^6.0",
-        "illuminate/routing": "^5.4|^6.0|^7.0"
+        "php": ">=7.3",
+        "eloquent/enumeration": "^6.0",
+        "illuminate/routing": "^7.0|^8.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^8.0",
-        "doctrine/orm": "^2.6",
-        "laravel/framework": "^5.4|^6.0|^7.0",
-        "symfony/var-dumper": "^5.0",
-        "rcrowe/twigbridge": "^0.11",
-        "twig/extensions": "^1.5"
-    },
-    "suggest": {
-        "rcrowe/twigbridge": "Twig integration for the Twig extension, ~0.9.*",
-        "twig/extensions": "Additional useful Twig extensions ~1.3.0"
+        "phpunit/phpunit": "^9.5",
+        "doctrine/orm": "^2.7",
+        "laravel/framework": "^7.0|^8.0",
+        "symfony/var-dumper": "^5.1",
+        "rcrowe/twigbridge": "^0.12"
     }
 }
